--- a/foundry.toml
+++ b/foundry.toml
@@ -3,5 +3,6 @@ src = "src"
 out = "out"
 libs = ["lib"]
 solc_version = "0.8.24"
+viaIR = true
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
